# customer-engine

./: .whitelist.vulture  README.md  alembic.ini  pyproject.toml
backend/: .dockerignore  .gitignore  .mise.toml  Dockerfile  README.md  alembic.ini  jso.json  out.txt  pyproject.toml  railway.toml
backend/backend/: config.py
backend/backend/api/: __init__.py
backend/backend/api/ui/: __init__.py  automatic_responses.py  unmatched_prompts.py
backend/backend/core/automatic_responses/: __init__.py
backend/backend/core/unmatched_prompts/: __init__.py
backend/backend/migrations/: env.py
backend/backend/migrations/versions/: 4fd3a4014721_add_embedding_model_used_column_to_.py  b1a5b6c728fa_remove_forms_tables.py
backend/customer_engine/: __init__.py  _config.py  config.py  traits.py  typing.py
backend/customer_engine/api/: __init__.py  health.py
backend/customer_engine/api/internal/: __init__.py  forms.py  whatsapp.py
backend/customer_engine/api/ui/: __init__.py  automatic_responses.py  forms.py  unmatched_prompts.py
backend/customer_engine/commands/automatic_responses/: __init__.py  create.py  delete.py  get.py  list.py  search_by_prompt.py  update.py
backend/customer_engine/commands/unmatched_prompts/: __init__.py  add_as_example_to_automatic_response.py  delete.py  get.py  list.py  register.py
backend/customer_engine/core/: config.py  forms.py  interfaces.py  transactions.py  whatsapp_flows.py
backend/customer_engine/core/automatic_responses/: __init__.py  create.py  delete.py  get.py  list.py  search_by_prompt.py  update.py
backend/customer_engine/core/clients/: open_ai.py
backend/customer_engine/core/unmatched_prompts/: __init__.py  add_as_example_to_automatic_response.py  delete.py  get.py  list.py  register.py
backend/customer_engine/migrations/: env.py
backend/customer_engine/migrations/versions/: 127d34fd5433_rename_whatsapp_flows_table_to_forms.py  17ae4bd12e02_whatsapp_flows.py  4fd3a4014721_add_embedding_model_used_column_to_.py  83649af6bbf4_create_automatic_response_table.py  a0514cb6d06f_add_metadata_column_to_whatsapp_flows_.py
backend/customer_engine/web/api/: __init__.py  whatsapp.py
backend/customer_engine/workflows/forms/: __init__.py  delete_form.py  get_all_forms.py  get_form.py  get_most_relevant_form.py  register_form.py  update_form.py
backend/customer_engine/workflows/whatsapp/: delete_flow.py  get_all_flows.py  get_flow.py  get_most_relevant_flows.py  register_flow.py  update_flow.py
backend/customer_engine_api/: __init__.py  config.py  logging.py
backend/customer_engine_api/api/: __init__.py  health.py
backend/customer_engine_api/api/htmx/: __init__.py
backend/customer_engine_api/api/ui/: __init__.py  _deps.py  automatic_responses.py  deps.py  org_settings.py  unmatched_prompts.py  whatsapp_tokens.py
backend/customer_engine_api/api/webhooks/: __init__.py
backend/customer_engine_api/core/: automatic_responses.py  config.py  interfaces.py  jwt.py  time.py  typing.py  unmatched_prompts.py  whatsapp.py
backend/customer_engine_api/core/api_clients/: whatsapp.py
backend/customer_engine_api/core/automatic_responses/: __init__.py  _embeddings.py
backend/customer_engine_api/core/http/: __init__.py
backend/customer_engine_api/core/jwt/: __init__.py
backend/customer_engine_api/core/org_settings/: __init__.py
backend/customer_engine_api/core/unmatched_prompts/: __init__.py
backend/customer_engine_api/core/whatsapp/: __init__.py  _payloads.py  hashing.py
backend/customer_engine_api/core/whatsapp_tokens/: __init__.py
backend/customer_engine_api/handlers/: __init__.py
backend/customer_engine_api/handlers/auth/: validate_token.py
backend/customer_engine_api/handlers/automatic_responses/: __init__.py  create.py  create_auto_resp.py  create_example.py  delete.py  delete_auto_res.py  delete_bulk_examples.py  delete_example.py  get.py  get_auto_res.py  get_auto_res_owns_example.py  get_example.py  list_all.py  search_by_prompt.py  similar_example_by_prompt.py  similar_examples_by_prompt.py  update.py  update_auto_res.py  update_example.py
backend/customer_engine_api/handlers/org_settings/: __init__.py  delete.py  get_or_default.py  upsert.py
backend/customer_engine_api/handlers/unmatched_prompts/: __init__.py  add_as_example_to_automatic_response.py  delete.py  get.py  list_all.py  register.py
backend/customer_engine_api/handlers/whatsapp/: __init__.py  delete_tokens.py  get_tokens.py  react_to_webhook_event.py  register_tokens.py  reply_message.py  update_tokens.py
backend/customer_engine_api/migrations/: env.py
backend/customer_engine_api/migrations/versions/: 10fd71881a3a_create_form_config_table.py  127d34fd5433_rename_whatsapp_flows_table_to_forms.py  41c8e2250e65_empty_database.py  494502525574_whatsapp_tokens.py  62525831f106_automatic_responses_owns_examples.py  b1a5b6c728fa_remove_forms_tables.py  be3611411d53_create_unmatched_prompts_table.py  c556d6cf4749_add_org_settings.py
backend/requirements/: core.txt  dev.txt
backend/scripts/: new-release.py
backend/src/customer_engine_api/api/: __init__.py  health.py
backend/src/customer_engine_api/cli/: __init__.py  __main__.py  server.py
backend/src/customer_engine_api/core/: config.py  interfaces.py  typing.py
backend/src/customer_engine_api/handlers/: __init__.py
backend/src/customer_engine_api/migrations/: env.py
backend/templates/: index.html  search-result.html
backend/tests/: conftest.py  test_workflow.py
backend/tests/commands/: test_automatic_responses.py  test_unmatched_prompts.py
backend/tests/core/: test_automatic_responses.py  test_jwt.py  test_whatsapp.py
backend/tests/core/automatic_responses/: test_cmd.py  test_core.py
backend/tests/core/clients/: test_open_ai.py
backend/tests/core/unmatched_prompts/: test_cmd.py
backend/tests/core/whatsapp/: test_cmd.py  test_core.py
backend/tests/core/whatsapp_tokens/: test_cmd.py  test_core.py
backend/tests/handlers/: test_auth.py  test_automatic_responses.py  test_org_settings.py  test_unmatched_prompts.py  test_whatsapp.py
customer_engine/: __init__.py
(+216 files in other folders)
